# kafka-k8s-operator

./: .gitignore  .safety-policy.yml  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  concierge.yaml  config.yaml  foo.md  metadata.yaml  noxfile.py  pyproject.toml  refresh_versions.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml  actionlint.yaml  pull_request_template.md  zizmor.yaml
.github/workflows/: automatic-doc-checks.yml  check_pr.yaml  ci.yaml  markdown-style-checks.yml  promote.yaml  release.yaml  sync_docs.yaml  sync_issue_to_jira.yaml  tics_run_sh_ghaction_test.yml  tiobe_scan.yaml
docs/: .custom_wordlist.txt  conf.py  index.md  redirects.txt  requirements.txt
docs/_static/: robots.txt
docs/explanation/: backups.md  cluster-configuration.md  cryptography.md  e-cluster-configuration.md  e-cryptography.md  e-hardening.md  e-security.md  e-trademarks.md  index.md  mirrormaker2-0.md  security.md  trademarks.md
docs/how-to/: back-up-and-restore.md  client-connections.md  create-mtls-client-credentials.md  enable-encryption.md  enable-oauth-through-hydra.md  external-k8s-connection.md  h-backup-restore-configuration.md  h-cluster-migration.md  h-deploy-aks.md  h-deploy-eks.md  h-deploy.md  h-enable-encryption.md  h-enable-monitoring.md  h-external-k8s-connection.md  h-integrate-alerts-dashboards.md  h-manage-app.md  h-manage-message-schemas.md  h-manage-units.md  h-upgrade.md  index.md  kafka-connect.md  kafka-ui.md  manage-applications.md  manage-message-schemas.md  manage-units.md  migrate-a-cluster.md  migrate.md  monitoring.md  oauth.md  oauth.md.bak  schemas-serialisation.md  schemas.md  tls-encryption.md  troubleshooting.md  upgrade.md  use-kafka-connect-for-etl-workloads.md
docs/how-to/cluster/: index.md  migrate.md  replication.md
docs/how-to/cluster-replication/: cluster-replication.md  index.md  migrate-a-cluster.md
docs/how-to/deploy/: deploy-aks.md  deploy-anywhere.md  deploy-aws.md  deploy-azure.md  deploy-eks.md  deploy-on-aks.md  deploy-on-aws.md  deploy-on-azure.md  deploy-on-eks.md  deploy-spaces.md  deploy-terraform.md  index.md  kraft-mode.md
docs/how-to/h-deploy/: h-deploy-aks.md  h-deploy-anywhere.md  h-deploy-eks.md
docs/how-to/monitoring/: alerts.md  enable-monitoring.md  index.md  integrate-alerts-and-dashboards.md
docs/reference/: apache-kafka-listeners.md  contact.md  file-system-paths.md  index.md  listeners.md  performance-tuning.md  r-contacts.md  r-file-system-path.md  r-file-system-paths.md  r-listeners.md  r-requirements.md  r-statuses.md  requirements.md  snap-commands.md  snap-entrypoints.md  statuses.md  terraform.md
docs/reference/r-releases/: r-rev56_51.md  r-rev82.md
docs/reference/release-notes/: index.md  release-82.md  revision-156-126.md  (+5 more)
docs/tutorial/: 1-introduction.md  2-set-up-the-environment.md  3-deploy-apache-kafka.md  4-integrate-with-client-applications.md  5-manage-passwords.md  6-enable-encryption.md  7-reassign-partitions.md  7-use-kafka-connect-for-etl.md  8-cleanup-your-environment.md  8-rebalance-and-reassign-partitions.md  9-cleanup-your-environment.md  cleanup.md  deploy.md  enable-encryption.md  environment.md  index.md  integrate-with-client-applications.md  introduction.inc  introduction.md  manage-passwords.md  rebalance-partitions.md  t-cleanup-environment.md  t-deploy.md  t-enable-encryption.md  t-manage-passwords.md  t-overview.md  t-reassign-partitions.md  t-relate-kafka.md  t-setup-environment.md  use-kafka-connect.md
src/: auth.py  charm.py  config.py  connection_check.py  health.py  k8s_workload.py  literals.py  oauth.py  provider.py  structured_config.py  tls.py  utils.py  workload.py
src/core/: cluster.py  literals.py  models.py  structured_config.py  workload.py
src/events/: actions.py  balancer.py  broker.py  controller.py  oauth.py  password_actions.py  peer_cluster.py  provider.py  refresh.py  secrets.py  tls.py  upgrade.py  user_secrets.py  zookeeper.py
src/grafana_dashboards/: kafka-metrics.json  kafka_cluster.tmpl  kafka_connect_cluster.tmpl  kafka_dashboard.tmpl  kafka_topics.tmpl  zookeeper_cluster.tmpl
src/managers/: auth.py  balancer.py  config.py  controller.py  k8s.py  ssl_principal_mapper.py  tls.py
templates/: entrypoint  kafka_broker.yml
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: __init__.py
tests/fixtures/: valid_server.properties
tests/integration/: conftest.py  helpers.py  retry.sh  test_auto_balance.py  test_balancer.py  test_charm.py  test_kafka_provider.py  test_kraft.py  test_password_rotation.py  test_provider.py  test_provider_v1.py  test_refresh.py  test_scaling.py  test_tls.py  test_tls_complex.py  test_upgrade.py
tests/unit/: TestJKS.java  _test_charm.py  conftest.py  helpers.py  test_auth.py  test_balancer.py  test_charm.py  test_charm_balancer.py  test_config.py  test_controller_manager.py  test_health.py  test_kraft.py  test_provider.py  test_refresh.py  test_secrets.py  test_ssl_principal_mapping.py  test_structured_config.py  test_tls.py  test_tls_manager.py  test_upgrade.py  test_user_secrets.py  test_workload.py
(+55 files in other folders)
